# ccaps

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  config.rs  interactive_menu.rs  keyboard_hook.rs  layout_indicator.rs  layout_manager.rs  main.rs  process_utils.rs
