[package]
name = "ccaps"
version = "0.5.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi", 
    "processthreadsapi",
    "minwindef",
    "windef",
    "winreg",
    "handleapi",
    "winerror",
    "wincon",
    "synchapi",
    "errhandlingapi",
    "winnt",
    "winbase",
    "shellapi",
    "fileapi"
] }
ctrlc = "3.4"

# Optimizations for release build
[profile.release]
opt-level = "s"  # Size optimization
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"  # Remove unwinding for smaller size
strip = true     # Remove debug information

[[bin]]
name = "ccaps"
path = "src/main.rs"