[package]
name = "ccaps"
version = "0.8.3"
edition = "2021"
authors = ["holgertkey"]
description = "A lightweight Windows keyboard layout switcher that repurposes the Caps Lock key for quick layout switching"
license = "MIT"
repository = "https://github.com/holgertkey/ccaps"
homepage = "https://github.com/holgertkey/ccaps"
documentation = "https://github.com/holgertkey/ccaps#readme"
readme = "README.md"
keywords = ["keyboard", "layout", "windows", "caps-lock", "switcher"]
categories = ["command-line-utilities", "os::windows-apis"]
rust-version = "1.70"
exclude = [
    ".git*",
    ".vscode/",
    "target/",
    "*.json",
    "!Cargo.lock"
]

[dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi", 
    "processthreadsapi",
    "minwindef",
    "windef",
    "winreg",
    "handleapi",
    "winerror",
    "wincon",
    "synchapi",
    "errhandlingapi",
    "winnt",
    "winbase",
    "shellapi",
    "fileapi"
] }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optimizations for release build
[profile.release]
opt-level = "s"  # Size optimization
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"  # Remove unwinding for smaller size
strip = true     # Remove debug information

[[bin]]
name = "ccaps"
path = "src/main.rs"